new meta tags for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Manutenção de eletrônicos">
+    <meta name="keywords" content="Ananindeua, 
+    Pará, Belém, Aurá, alto-falante, 
+    conserto, caixa de som, manutenção, eletrônicos">
+    <meta name="author" content="github.com/pgthiago">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
